rather small things

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -4,7 +4,7 @@ default: mpy-svn-stats-stats
 
 
 mpy-svn-stats-stats-generate:
-	./mpyss.py -u svn://svn.berlios.de/mpy-svn-stats/ -r yes
+	./mpyss.py -u svn://svn.berlios.de/mpy-svn-stats/ -r
 
 mpy-svn-stats-stats-import:
 	./mpyss.py -u svn://svn.berlios.de/mpy-svn-stats/ -i mpy-svn-stats.svnlog --no-reports
@@ -17,13 +17,11 @@ mpy-svn-stats.svnlog:
 zope3.svnlog:
 	svn -v --xml log svn://svn.zope.org/repos/main/Zope3 | ./filter.py > zope3.svnlog
 
-zope-stats-import:
+zope3-stats-import:
 	[ -f zope3.svnlog ] && ./mpyss.py -i zope3.svnlog -u svn://svn.zope.org/repos/main/Zope3
 
-zope-stats-generate:
-	./mpyss.py -r yes -u svn://svn.zope.org/repos/main/Zope3
-
-
+zope3-stats-generate:
+	./mpyss.py -r -u svn://svn.zope.org/repos/main/Zope3
 
 tags:
 	exuberant-ctags -R *
